tests/ui/specialization/fuzzed/fuzzing-ice-126268.stderr
error: specialization impl does not specialize any associated items
  --> $DIR/fuzzing-ice-126268.rs:22:1
   |
LL | impl<'a> Trait for DatasetIter<'a, ArrayBase> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: impl is a specialization of this impl
  --> $DIR/fuzzing-ice-126268.rs:10:1
   |
LL | impl<T> Trait for T {}
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

